# natural-computing

./: .gitignore  pyproject.toml
examples/: best_mean_plot.py  curve_plot.py  ga.py  polynomial.py  pso.py
examples/neural_network/: cubic.py  nn.py  regression.py
examples/optimization/: curve_plot.py  de.py  es.py  ga.py  polynomial.py  pso.py
natural_computing/: __init__.py
natural_computing/data_preparation/: __init__.py  dataset.py  scaler.py
natural_computing/network_utils/: __init__.py  codification.py  factories.py  objective_functions.py
natural_computing/neural_network/: __init__.py  activation_functions.py  layers.py  loss_functions.py  network.py  regularization.py  utils.py
natural_computing/objective_functions/: __init__.py  base_function.py  benchmarks.py
natural_computing/optimization/: __init__.py  base_optimizer.py  differential_evolution.py  evolution_strategy.py  genetic_algorithm.py  particle_swarm.py
natural_computing/plotting/: __init__.py  fit_value.py  plotter.py
natural_computing/utils/: __init__.py  binary.py  data_generation.py  factories.py  math.py  network.py
